[metadata]
name = cardiffwaste
version = attr: cardiffwaste.__version__
author = Tom Brien
author_email = tom@tombrien.io
description = A package to gather waste collection details for UK addresses served by Cardiff Council.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tombrien/cardiffwastepy
project_urls =
    Bug Tracker = https://github.com/tombrien/cardiffwastepy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    httpx
    bs4
    getuseragent

[options.packages.find]
exclude=
    tests
    tests.*